# git-sync-push

./: Cargo.toml  Containerfile
.github/workflows/: ci.yaml
src/: cli.rs  git.rs  health_check.rs  main.rs  signal_handlers.rs
