[package]
name = "git-sync-push"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.30", features = ["derive", "env"] }
derive_more = { version = "2.0.1", features = ["debug"] }
git2 = "0.20.0"
humantime = "2.1.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
